# clang_ast

./: .gitignore  DELIVERABLES.md  FEATURES.md  OPTIMIZATION_PLAN.md  PLAN.md  README.md  REQUIREMENTS.md  SOLUTIONS.md  callback.cfg  callback.toml  filter.cfg  filter.cfg.example  main.py  pyproject.toml  requirements.txt  test-smart-drying.sh
examples/simple_project/: compile_commands.json  filter.cfg
examples/simple_project/src/: main.cpp  utils.cpp  utils.h
src/: __init__.py  call_graph_builder.py  callback_config.py  clangd_client.py  cli.py  config.py  validator.py
tests/: __init__.py  test_clangd_client.py  test_config.py  test_validator.py
